--- a/mod2/index.html
+++ b/mod2/index.html
@@ -1,1 +1,39 @@
-html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">	
+	<title>Assignment Solution for Module 2</title>
+	<link rel="stylesheet" href="css/style.css"/>
+</head>
+<body>
+	
+	<div class="wrapper">
+		<header>
+				<h1>Our Menu</h1>
+			</header>
+		<section class="columns">
+
+		   <div class="column">
+			
+			<h2>Chicken</h2>
+			<p>this assignment is very important to practice your Html and css languages but <br>it neess a little time to finish the assignment W3Schools is an educational website for learning web technologies online. Content includes tutorials and references relating<br> to HTML, CSS, JavaScript, JSON, PHP, Python, AngularJS, React.js, SQL, Bootstrap, Sass, Node.js, jQuery, XQuery, AJAX, XML, Raspberry Pi, C++, C# and Java</p>
+		</div>
+		<div class="column">
+			<h2>Beef</h2>
+			<p>this assignment is very important to practice your Html and css languages but<br> it neess a little time to finish the assignment W3Schools is an educational website for learning web technologies online. Content includes tutorials and references relating<br> to HTML, CSS, JavaScript, JSON, PHP, Python, AngularJS, React.js, SQL, Bootstrap, Sass, Node.js, jQuery, XQuery, AJAX, XML, Raspberry Pi, C++, C# and Java</p>
+		</div>
+		<div class="column">
+			<h2>Sushi</h2>
+			<p>this assignment is very important to practice your Html and css languages but<br> it neess a little time to finish the assignmen
+			t W3Schools is an educational website for learning web technologies online. Content<br> includes tutorials and references relating to HTML, CSS, JavaScript, JSON, PHP, Python, AngularJS, React.js, SQL, Bootstrap, Sass, Node.js, jQuery, XQuery, AJAX, XML,<br>Raspberry Pi, C++, C# and Java</p>
+		</div>
+	</section>
+	</div>
+
+
+   
+
+
+</body>
+</html>
